post header styles and fix for comment form overflow

--- a/styles/sass/_comments.scss
+++ b/styles/sass/_comments.scss
@@ -76,6 +76,9 @@ ul.children {
 	background: none repeat scroll 0 0 #E3E3E3;
 	padding: 18px;
 }
+#commentform {
+	overflow: auto;
+}
 .box.ads .content {
 	padding-left: 15px;
 	padding-right: 0;
