--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -193,20 +193,20 @@ ul#xyz li {
 	display: none;
 }
 
-.postdate  {
-    background: none repeat scroll 0 0 #FFFFFF;
-    color: #000000;
-    float: left;
-    font-family: 'Segoe UI';
-    font-size: 18px;
-    font-weight: bold;
-    margin: 10px;
-    padding: 5px;
-    position: absolute;
-    right: 0;
-    text-align: center;
-    text-transform: none;
-}
+// .postdate  {
+//     background: none repeat scroll 0 0 #FFFFFF;
+//     color: #000000;
+//     float: left;
+//     font-family: 'Segoe UI';
+//     font-size: 18px;
+//     font-weight: bold;
+//     margin: 10px;
+//     padding: 5px;
+//     position: absolute;
+//     right: 0;
+//     text-align: center;
+//     text-transform: none;
+// }
 p.postdata  {
 	color: #AEADAD;
 	font-size: 90%;
@@ -229,21 +229,22 @@ p.postdata a:hover {
 p.postdata em {
 	font: italic 100% Georgia,"Times New Roman",Times,serif;
 }
-h1.article_h1 {
-	background: rgb(255, 255, 255); /* The Fallback */
-	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.9); 
-    color: #000000;
-    font-family: "Segoe UI",Tahoma,Geneva,sans-serif;
-    font-size: 40px;
-    font-weight: normal;
-    left: 0;
-    margin: 15px;
-    padding: 15px;
-    position: absolute;
-	bottom: -415px;
-  	width: 630px;
-    z-index: 998;
-}
+// h1.article_h1 {
+// 	background: rgb(255, 255, 255); /* The Fallback */
+// 	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.9); 
+//     color: #000000;
+//     font-family: "Segoe UI",Tahoma,Geneva,sans-serif;
+//     font-size: 40px;
+//     font-weight: normal;
+//     left: 0;
+//     margin: 15px;
+//     padding: 15px;
+//     position: absolute;
+// 	bottom: 0;
+//   width: 80%;
+//   	max-width: 630px;
+//     z-index: 998;
+// }
 h1.page_h1 {
 	background: none repeat scroll 0 0 $gp-green;
 	color: #ffffff;
@@ -303,6 +304,11 @@ span.edit-link {
 
   .entry-content & {
     max-width: 50%; 
+  }
+
+  &.aligncenter {
+    clear: both;
+    margin: 0 auto;
   }
 }
 .wp-caption-text
@@ -638,17 +644,19 @@ h1.side_subpages-title {
 img#wpstats {
 	display: none;
 }
-.sticky {
-}
-.gallery-caption {
-}
-.bypostauthor {
-}
-#featured_image {
-    float: left;
-    margin: 0 !important;
-    width: 100%;
-}
+// .sticky {
+// }
+// .gallery-caption {
+// }
+// .bypostauthor {
+// }
+// #featured_image {
+//     float: left;
+//     margin: 0 !important;
+//     width: 100%;
+//     position: relative;
+//     overflow: auto;
+// }
 .ln_image {
     float: left;
     margin: 0 10px 0 0;
